--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ body{
 }
 
 a{
-    color: var(--color-gray-700);
+    /* color: var(--color-gray-700); */
     text-decoration: none;
 }
 
@@ -70,10 +70,10 @@ ul{
     list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6{
+/* h1, h2, h3, h4, h5, h6{
     color: var(--color-gray-900);
     line-height: 1.1;
-}
+} */
 
 h1{
     font-size: 2.2rem;
